[package]
name = "cubic_transformation_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
levenberg-marquardt = "0.13.0"
rand = "0.8.5"
rand_distr = "0.4.3"
nalgebra = "0.32.2"
debug_print = "1.0.0"
